hypr: big switch uwsm

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -3,14 +3,23 @@ source = ~/.config/hypr/ifgdt_monitors.conf
 # load plugins
 exec-once = hyprpm reload -n
 
+plugin {
+    # for xwayland
+    # Replaces and improves: exec=rxrandr --output "DP-1" --primary
+    xwaylandprimary {
+        display = DP-1
+    }
+}
+
 # Set programs that you use
-$term = alacritty
-$fileManager = alacritty -e lfcd_sh
-$browser = librewolf
-$menu = mdmenu_run | xargs hyprctl dispatch exec --
+$uwsm_app = uwsm app --
+$term = $uwsm_app $TERMINAL
+$term_exec = $uwsm_app $TERMINAL_EXEC
+$file_manager = $term_exec lfcd_sh
+$menu = $uwsm_app mdmenu_run | xargs hyprctl dispatch exec --
 
 # Some default env vars.
-# these XDG vars should be set automatically but we set them here aswell (just in case)
+# these XDG vars should be set automatically but we set them here as well (just in case)
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -130,13 +139,6 @@ misc {
     animate_mouse_windowdragging = true
 }
 
-# Autoruns
-# X11 theme stuff
-exec-once = xrdb -load "$HOME/.Xdefaults"
-# email client
-exec-once = thunderbird
-
-
 # See https://wiki.hyprland.org/Configuring/Window-Rules
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
@@ -197,99 +199,99 @@ $alt = ALT
 #
 # exit Hyprland. Hyprland would hang while waiting for swaynag to exit,
 # so I added the killall cmd.
-bind = $mod+SHIFT+CONTROL, Q, exec, hyprctl dispatch exit
+bind = $mod+SHIFT+CONTROL, Q, exec, uwsm stop
 # reload Hyprland
-bind = $mod+SHIFT+CONTROL, R, exec, hyprctl reload
+bind = $mod+SHIFT+CONTROL, R, exec, $uwsm_app hyprctl reload
 # kill focused window
 bind = $alt, F4, killactive,
 # lock screen
-bind = $mod, F12, exec, loginctl lock-session
+bind = $mod, F12, exec, $uwsm_app loginctl lock-session
 # suspend
-bind = $mod+SHIFT, F12, exec, systemctl suspend
+bind = $mod+SHIFT, F12, exec, $uwsm_app systemctl suspend
 # toggle bar
-bind = $mod, B, exec, killall -SIGUSR1 waybar
+bind = $mod, B, exec, $uwsm_app killall -SIGUSR1 waybar
 
 #
 # Apps:
 #
 # terminal
 bind = $mod, T, exec, $term
-bind = $mod+CONTROL, T, exec, foot
+bind = $mod+CONTROL, T, exec, $uwsm_app foot
 # app launcher
 bind = $mod, P, exec, $menu
-bind = $mod, RETURN, exec, $menu
+bind = $mod, RETURN, exec, menu
 # other
-bind = $mod+CONTROL, A, exec, $term -e calcurse
-bind = $mod+CONTROL, C, exec, $term -e numbat
-bind = $mod++SHIFT,  C, exec, $term -e codi
-bind = $mod+CONTROL+SHIFT, C, exec, $term -e mmaxima
+bind = $mod+CONTROL, A, exec, $term_exec calcurse
+bind = $mod+CONTROL, C, exec, $term_exec numbat
+bind = $mod++SHIFT,  C, exec, $term_exec codi
+bind = $mod+CONTROL+SHIFT, C, exec, $term_exec mmaxima
 bind = $mod, V, exec, $term --class clipse -e clipse
 #bind = $mod+CONTROL, E, exec, XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
-bind = $mod+CONTROL, E, exec, thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
-bind = $mod+CONTROL, F, exec, $fileManager
-bind = $mod+CONTROL, I, exec, $term -e newsboat
-bind = $mod+CONTROL, M, exec, dmount
-bind = $mod+CONTROL, N, exec, dtodo
+bind = $mod+CONTROL, E, exec, $uwsm_app thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
+bind = $mod+CONTROL, F, exec, $file_manager
+bind = $mod+CONTROL, I, exec, $term_exec newsboat
+bind = $mod+CONTROL, M, exec, $uwsm_app dmount
+bind = $mod+CONTROL, N, exec, $uwsm_app dtodo
 # bind = $mod, M, exec, screen_measure
-bind = $mod+CONTROL, P, exec, gimp
-bind = $mod+CONTROL, R, exec, $browser
-bind = $mod+SHIFT, R, exec, firefox
-bind = $mod+CONTROL, S, exec, $term -e ncmpcpp
-bind = $mod+CONTROL, V, exec, drecord
-bind = $mod+CONTROL, W, exec, $term -e nvim
+bind = $mod+CONTROL, P, exec, $uwsm_app gimp
+bind = $mod+CONTROL, R, exec, $uwsm_app $BROWSER
+bind = $mod+SHIFT, R, exec, $uwsm_app firefox
+bind = $mod+CONTROL, S, exec, $term_exec ncmpcpp
+bind = $mod+CONTROL, V, exec, $uwsm_app drecord
+bind = $mod+CONTROL, W, exec, $term_exec nvim
 
 #
 # Media keys:
 #
 # display
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bind = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
-bind = , XF86Display, exec, brightnessctl -r
+bind = , XF86MonBrightnessDown, exec, $uwsm_app brightnessctl set 5%-
+bind = , XF86MonBrightnessUp, exec, $uwsm_app brightnessctl set 5%+
+bind = , XF86Display, exec, $uwsm_app brightnessctl -r
 # audio
-bind = $mod, F8, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mod+SHIFT, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = $mod+CONTROL, F8, exec, next_sink.sh
-bind = $mod, F9, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = $mod, F10, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = $mod, F8, exec, $uwsm_app pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = $mod+SHIFT, F8, exec, $uwsm_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = $mod+CONTROL, F8, exec, $uwsm_app next_sink.sh
+bind = $mod, F9, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = $mod, F10, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ +5%
 #
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioMute, exec, $uwsm_app pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, $uwsm_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = , XF86AudioLowerVolume, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioRaiseVolume, exec, $uwsm_app pactl set-sink-volume @DEFAULT_SINK@ +5%
 # media
-bind = $mod, F5, exec, playerctl play-pause
-bind = $mod+SHIFT, F5, exec, playerctl position 0
-bind = $mod+CONTROL, F5, exec, notify-send -u low 'Current song' "$(mpc current)"
-bind = $mod, F6, exec, playerctl previous
-bind = $mod+SHIFT, F6, exec, playerctl volume 0.05-
-bind = $mod, F7, exec, playerctl next
-bind = $mod+SHIFT, F7, exec, playerctl volume 0.05+
+bind = $mod, F5, exec, $uwsm_app playerctl play-pause
+bind = $mod+SHIFT, F5, exec, $uwsm_app playerctl position 0
+bind = $mod+CONTROL, F5, exec, $uwsm_app notify-send -u low 'Current song' "$(mpc current)"
+bind = $mod, F6, exec, $uwsm_app playerctl previous
+bind = $mod+SHIFT, F6, exec, $uwsm_app playerctl volume 0.05-
+bind = $mod, F7, exec, $uwsm_app playerctl next
+bind = $mod+SHIFT, F7, exec, $uwsm_app playerctl volume 0.05+
 #
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = SHIFT, XF86AudioPlay, exec, playerctl position 0
-bind = CONTROL, XF86AudioPlay, exec, notify-send -u low 'Current song' "$(mpc current)"
-bind = , XF86AudioPrev, exec, playerctl previous
-bind = SHIFT, XF86AudioPrev, exec, playerctl volume 0.05-
-bind = , XF86AudioNext, exec, playerctl next
-bind = SHIFT, XF86AudioNext, exec, playerctl volume 0.05+
+bind = , XF86AudioPlay, exec, $uwsm_app playerctl play-pause
+bind = SHIFT, XF86AudioPlay, exec, $uwsm_app playerctl position 0
+bind = CONTROL, XF86AudioPlay, exec, $uwsm_app notify-send -u low 'Current song' "$(mpc current)"
+bind = , XF86AudioPrev, exec, $uwsm_app playerctl previous
+bind = SHIFT, XF86AudioPrev, exec, $uwsm_app playerctl volume 0.05-
+bind = , XF86AudioNext, exec, $uwsm_app playerctl next
+bind = SHIFT, XF86AudioNext, exec, $uwsm_app playerctl volume 0.05+
 #
 bind = , XF86Search, exec, $menu
 
 #
 # Notifications:
 #
-bind = $mod, F11, exec, swaync-client -d -sw # toggle dnd
-bind = $mod, backspace, exec, swaync-client --close-latest -sw # dismiss last
-bind = $mod+SHIFT, backspace, exec, swaync-client --close-all -sw # dismiss all
-bind = $mod+CONTROL, backspace, exec, swaync-client -t -sw # show notifications
+bind = $mod, F11, exec, $uwsm_app swaync-client -d -sw # toggle dnd
+bind = $mod, backspace, exec, $uwsm_app swaync-client --close-latest -sw # dismiss last
+bind = $mod+SHIFT, backspace, exec, $uwsm_app swaync-client --close-all -sw # dismiss all
+bind = $mod+CONTROL, backspace, exec, $uwsm_app swaync-client -t -sw # show notifications
 
 #
 # Screenshots:
 #
-bind = $mod, Print, exec, killall slurp; screenshots "snip-edit"
-bind = $mod+SHIFT, Print, exec, screenshots "current-save"
-bind = $mod+SHIFT, S, exec, killall slurp; screenshots "snip"
-bind = $mod+CONTROL, Print, exec, screenshots
+bind = $mod, Print, exec, $uwsm_app killall slurp; screenshots "snip-edit"
+bind = $mod+SHIFT, Print, exec, $uwsm_app screenshots "current-save"
+bind = $mod+SHIFT, S, exec, $uwsm_app killall slurp; screenshots "snip"
+bind = $mod+CONTROL, Print, exec, $uwsm_app screenshots
 
 #
 # Movement:
@@ -371,20 +373,35 @@ submap = passthru
 bind = $mod, Escape, submap, reset
 submap = reset
 
-# for xdg-desktop-portal-hyprland
-exec-once=dbus-update-activation-environment --systemd --all; systemctl --user restart hyprland-session.target
-
-# top bar here because it misbehaved when used by systemd-service during restarts
-exec-once=waybar
-
+# Autoruns
+# X11 theme stuff
+exec-once = $uwsm_app xrdb -load "$HOME/.Xdefaults"
+# email client
+exec-once = $uwsm_app thunderbird
+# top bar
+exec-once = $uwsm_app waybar
 # for screen brightness and stuff
-exec-once=wl-gammarelay-rs
-
-# bluetooth applet
-exec-once=blueman-applet
-
+exec-once = $uwsm_app wl-gammarelay-rs
+# bluetooth unlock
+exec-once = $uwsm_app blueidle
+# clipboard manager
+exec-once = $uwsm_app clipse -listen
+# wallpaper
+exec-once = $uwsm_app hyprpaper
+# theme settings for GTK 4
+exec-once = $uwsm_app import-gsettings
 # easy effects
-exec-once=easyeffects --gapplication-service
+exec-once = $uwsm_app easyeffects --gapplication-service
+# user input automation
+exec-once = $uwsm_app ydotoold
+# idle manager
+exec-once = $uwsm_app hypridle
+# polkit agent
+exec-once = $uwsm_app hyprpolkitagent
+# notification agent
+exec-once = $uwsm_app swaync
+# drawing table
+exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
 
-# for xwayland
-exec=xrandr --output "DP-1" --primary
+# for xdg-desktop-portal-hyprland
+# exec-once=dbus-update-activation-environment --systemd --all
