hypr: fix dmenu keybind

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -219,7 +219,7 @@ bind = $mod, T, exec, $term
 bind = $mod+CONTROL, T, exec, $uwsm_app foot
 # app launcher
 bind = $mod, P, exec, $menu
-bind = $mod, RETURN, exec, menu
+bind = $mod, RETURN, exec, $menu
 # other
 bind = $mod+CONTROL, A, exec, $term_exec calcurse
 bind = $mod+CONTROL, C, exec, $term_exec numbat
