ssh-agent: properly setup ssh agent from user unit

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -376,32 +376,34 @@ submap = reset
 # Autoruns
 # X11 theme stuff
 exec-once = $uwsm_app xrdb -load "$HOME/.Xdefaults"
-# email client
-exec-once = $uwsm_app thunderbird
+# theme settings for GTK 4
+exec-once = $uwsm_app import-gsettings
+
 # top bar
 exec-once = $uwsm_app waybar
+# wallpaper
+exec-once = $uwsm_app hyprpaper
+# idle manager
+exec-once = $uwsm_app hypridle
+# notification agent
+exec-once = $uwsm_app swaync
+
+# lf file handling from GUI
+exec-once = $uwsm_app lf-file-handler
 # for screen brightness and stuff
 exec-once = $uwsm_app wl-gammarelay-rs
 # bluetooth unlock
 exec-once = $uwsm_app blueidle
-# clipboard manager
-exec-once = $uwsm_app clipse -listen
-# wallpaper
-exec-once = $uwsm_app hyprpaper
-# theme settings for GTK 4
-exec-once = $uwsm_app import-gsettings
-# easy effects
-exec-once = $uwsm_app easyeffects --gapplication-service
-# user input automation
-exec-once = $uwsm_app ydotoold
-# idle manager
-exec-once = $uwsm_app hypridle
 # polkit agent
 exec-once = $uwsm_app hyprpolkitagent
-# notification agent
-exec-once = $uwsm_app swaync
+# user input automation
+exec-once = $uwsm_app ydotoold
+
+# email client
+exec-once = $uwsm_app thunderbird
+# clipboard manager
+exec-once = $uwsm_app clipse -listen
+# easy effects
+exec-once = $uwsm_app easyeffects --gapplication-service
 # drawing table
 exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
-
-# for xdg-desktop-portal-hyprland
-# exec-once=dbus-update-activation-environment --systemd --all
