--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -150,8 +150,8 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 # clipse floating window
-windowrulev2 = float,class:(clipse)
-windowrulev2 = size 622 652,class:(clipse)
+windowrulev2 = float,class:(com.joaocostaifg.clipse)
+windowrulev2 = size 622 652,class:(com.joaocostaifg.clipse)
 
 # "Smart gaps" / "No gaps when only"
 workspace = w[t1], gapsout:0, gapsin:0
@@ -225,7 +225,7 @@ bind = $mod+CONTROL, A, exec, $term_exec calcurse
 bind = $mod+CONTROL, C, exec, $term_exec numbat
 bind = $mod++SHIFT,  C, exec, $term_exec codi
 bind = $mod+CONTROL+SHIFT, C, exec, $term_exec mmaxima
-bind = $mod, V, exec, $term --class clipse -e clipse
+bind = $mod, V, exec, $term --class=com.joaocostaifg.clipse -e clipse
 #bind = $mod+CONTROL, E, exec, XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
 bind = $mod+CONTROL, E, exec, $uwsm_app thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
 bind = $mod+CONTROL, F, exec, $file_manager
