audio: general audio config changes

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -404,6 +404,6 @@ exec-once = $uwsm_app thunderbird
 # clipboard manager
 exec-once = $uwsm_app clipse -listen
 # easy effects
-exec-once = $uwsm_app easyeffects --gapplication-service
+# exec-once = $uwsm_app easyeffects --gapplication-service
 # drawing table
 exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
