--- a/dot_config/imv/config
+++ b/dot_config/imv/config
@@ -43,9 +43,10 @@ l = pan -50 0
 x = close
 f = fullscreen
 d = overlay
+<Delete> = exec trash-put "$imv_current_file"; close
 #p = exec echo $imv_current_file
 c = center
-<Shift+C> = exec wl-copy <"$imv_current_file"
+<Ctrl+c> = exec wl-copy <"$imv_current_file"
 e = exec gimp "$imv_current_file"
 s = scaling next
 <Shift+S> = upscaling next
