--- a/dot_config/mpd/mpd.conf
+++ b/dot_config/mpd/mpd.conf
@@ -1,10 +1,10 @@
-db_file            "~/.config/mpd/database"
-log_file           "~/.config/mpd/log"
+db_file            "~/.local/share/mpd/database"
+log_file           "~/.local/share/mpd/log"
 music_directory    "~/Music/"
 playlist_directory "~/Music/playlists"
-pid_file           "~/.config/mpd/pid"
-state_file         "~/.config/mpd/state"
-sticker_file       "~/.config/mpd/sticker.sql"
+pid_file           "~/.local/share/mpd/pid"
+state_file         "~/.local/share/mpd/state"
+sticker_file       "~/.local/share/mpd/sticker.sql"
 
 auto_update "yes"
 
