--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -26,7 +26,7 @@
   "script-fail-notify": true,
   "scripts": {},
   "notification-visibility": {},
-  "widgets": ["title", "dnd", "notifications"],
+  "widgets": ["title", "dnd", "mpris", "notifications"],
   "widget-config": {
     "title": {
       "text": "Notifications",
