walker: use walker instead of dmenu (bemenu) as an app launcher
The advantages:\n- has mouse support (can launch any app using only the mouse)\n- natively supports app actions and .desktop files\n- shows icons

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ $uwsm_app = uwsm app --
 $term = $uwsm_app $TERMINAL
 $term_exec = $uwsm_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
-$menu = $uwsm_app mdmenu_run | xargs hyprctl dispatch exec --
+# $menu = $uwsm_app mdmenu_run | xargs hyprctl dispatch exec --
+$menu = $uwsm_app walker
 
 # Some default env vars.
 # these XDG vars should be set automatically but we set them here as well (just in case)
@@ -387,6 +388,8 @@ exec-once = $uwsm_app hyprpaper
 exec-once = $uwsm_app hypridle
 # notification agent
 exec-once = $uwsm_app swaync
+# menu
+exec-once = $uwsm_app walker --gapplication-service
 
 # lf file handling from GUI
 exec-once = $uwsm_app lf-file-handler
