This commit contains a series of changes made to various configuration files and scripts. Here's a breakdown of the changes:
1. Addition of `ecosystem` section in `hyprland.conf`, which sets `no_update_news` to true to prevent automatic news updates in Hyprland.
2. Change in the color of the marker for the scroll list in Walker's default theme (default.toml).
3. Update of the script `update-zfs` with a new command `update_zfs_dkms`, which installs the zfs-dkms package using yay. The script also now checks for Linux kernel compatibility with OpenZFS by fetching the latest release information from GitHub and grepping for compatible kernels.
4. Several changes have been made to various configuration files related to Git, including adding a new command `pf` (push --force-with-lease --force-if-includes) in the git config file and adjustments to the scripts for pulling updates and pushing commits.
5. The script for generating commit messages when using Conventional Commits has been updated with a new function `conventional_commit_keywords`, which defines the conventional commit keywords and a prompt that guides the user in creating a clean and comprehensive commit message according to the Conventional Commit Convention. Additionally, the script now uses the `ask` command to gather input from the user for generating the commit message.

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -58,6 +58,7 @@
     git pull ; \
   }; f"
   p = push
+  pf = push --force-with-lease --force-if-includes
   pu = "!f() {\
     if [ \"$#\" -eq 0 ]; then \
       branch_name=\"$(git rev-parse --abbrev-ref HEAD)\" ; \
