--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -55,6 +55,10 @@ input {
     }
 }
 
+ecosystem {
+    no_update_news = true
+}
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
