feat: reorganize scripts for clarity and efficiency
This commit introduces a new script, `ask`, to replace the `ask.fish` function in fish configuration. Additionally, the `gen_commit_msg.fish` function was moved from fish functions to scripts and slightly tweaked. The functions were moved so I can call them from other scripts.

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -42,11 +42,12 @@
   br = branch
   ck = checkout
   ckb = checkout -b
+  c = commit
   cm = commit -m
   cma = commit -a -m
   cmA = "!git add -A; git commit -m"
-  cmaa = cmA
   cmam = commit --amend -m
+  cg = "!gen_commit_msg \"$@\""
   d = diff
   df = diff
   l = log
