feat: remove hack for image previews in lf in ghostty
Just need to call ctpv with the TERM env var set "xterm-kitty".

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -5,6 +5,8 @@ font-family-bold = "monospace"
 font-family-italic = "italic"
 font-family-bold-italic = "italic"
 
+#term = "xterm-kitty"
+
 # Theme (see available themes with `ghostty +list-themes`)
 theme = "Everforest Dark - Hard"
 background = 0b0a18
