--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -61,9 +61,9 @@ keybind = alt+t=new_window
 keybind = alt+comma=open_config
 keybind = alt+shift+comma=reload_config
 keybind = alt+c=copy_to_clipboard
-keybind = performable:ctrl+c=copy_to_clipboard
 keybind = alt+v=paste_from_clipboard
-keybind = ctrl+v=paste_from_clipboard
+keybind = performable:ctrl+c=copy_to_clipboard
+# keybind = ctrl+v=paste_from_clipboard
 keybind = alt+insert=paste_from_selection
 keybind = alt+shift+j=write_scrollback_file:open
 
