ghostty: get rid of annoying multi line paste warning

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -209,6 +209,7 @@ bind = $mod+SHIFT+CONTROL, Q, exec, uwsm stop
 bind = $mod+SHIFT+CONTROL, R, exec, $uwsm_app hyprctl reload
 # kill focused window
 bind = $alt, F4, killactive,
+bind = $mod, Q, killactive,
 # lock screen
 bind = $mod, F12, exec, $uwsm_app loginctl lock-session
 # suspend
@@ -367,8 +368,8 @@ bind = $mod+SHIFT, Period, movewindow, mon:+1
 bind = $mod, Space, fullscreen, 0
 bind = $mod+SHIFT, Space, togglefloating,
 # Example special workspace (scratchpad)
-bind = $mod, Q, togglespecialworkspace, magic
-bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
+# bind = $mod, Q, togglespecialworkspace, magic
+# bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
 
 #
 # Passthrough mode:
