feat: remove default mapping for kitty_mod+f
This commit removes the default mapping for the `kitty_mod` key combination with `f`. This is done to prevent allow my alt+f keybind for lf.

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1959,6 +1959,7 @@ kitty_mod alt
 #: kitty_mod.
 
 # clear_all_shortcuts no
+map kitty_mod+f no_op
 
 #: Remove all shortcut definitions up to this point. Useful, for
 #: instance, to remove the default shortcuts.
