--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2281,8 +2281,8 @@ map cmd+t       new_os_window_with_cwd
 
 #: New tab
 
-map kitty_mod+n new_tab
-map cmd+n       new_tab
+map kitty_mod+n new_tab_with_cwd
+map cmd+n       new_tab_with_cwd
 
 #: Close tab
 
