--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1223,7 +1223,7 @@ window_alert_on_bell yes
 
 #: The foreground and background colors.
 
-background_opacity 1.0
+background_opacity 0.90
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1248,7 +1248,7 @@ background_opacity 1.0
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-# background_blur 0
+background_blur 8
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -2664,6 +2664,6 @@ map shift+cmd+i     set_tab_title
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Nord
 include current-theme.conf
 # END_KITTY_THEME
