--- a/dot_config/kitty/current-theme.conf
+++ b/dot_config/kitty/current-theme.conf
@@ -7,8 +7,8 @@
 # Basic colors
 foreground           #d8dee9
 background           #0b0a18
-selection_foreground #d8dee9
-selection_background #0b0a18
+selection_foreground #0b0a18
+selection_background #d8dee9
 
 # Cursor colors
 cursor            #d8dee9
