feat: Replace wl-gammarelay with hyprsunset
Replaces `wl-gammarelay-rs` with `hyprsunset` for gamma control
and updates the hypridle configuration to use `hyprsunset` for
brightness adjustment on idle and resume. Also update package lists.

This change unifies the color temperature and brightness control
under a single tool, simplifying the configuration and reducing
dependencies.

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -399,7 +399,7 @@ exec-once = $uwsm_app walker --gapplication-service
 # lf file handling from GUI
 exec-once = $uwsm_app lf-file-handler
 # for screen brightness and stuff
-exec-once = $uwsm_app wl-gammarelay-rs
+exec-once = $uwsm_app hyprsunset
 # bluetooth unlock
 exec-once = $uwsm_app blueidle
 # user input automation
