--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -8,9 +8,9 @@ general {
 listener {
     timeout = 150   # 2.5min.
     # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-timeout = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 0.3
+    on-timeout = hyprsunset -g 30
     # monitor backlight restore.
-    on-resume = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0
+    on-resume = hyprsunset -i
 }
 
 # turn off keyboard backlight
@@ -29,13 +29,13 @@ listener {
 listener {
     timeout = 700   # 11min
     # screen off when timeout has passed
-    on-timeout = hyprctl dispatch dpms off DP-1 ; hyprctl dispatch dpms off DP-2 ; hyprctl dispatch dpms on DP-3
+    on-timeout = hyprctl dispatch dpms off
     # screen on when activity is detected after timeout has fired.
-    on-resume = hyprctl dispatch dpms on ; hyprctl dispatch dpms off DP-3 ; xrandr --output "DP-1" --primary
+    on-resume = hyprctl dispatch dpms on ; xrandr --output "DP-1" --primary
 }
 
 # suspend
-# listener {
-#     timeout = 1800                    # 30min
-#     on-timeout = systemctl suspend    # suspend pc
-# }
+listener {
+    timeout = 1800                    # 30min
+    on-timeout = systemctl suspend    # suspend pc
+}
