feat: Add signed-off-by option to git aliases and script
Adds the `-s` option to the git commit aliases and the
`gen_commit_msg` script to automatically include the
`Signed-off-by` line in the commit message.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -42,10 +42,10 @@
   br = branch
   ck = checkout
   ckb = checkout -b
-  c = commit
-  cm = commit -m
-  cma = commit -a -m
-  cmA = "!git add -A; git commit -m"
+  c = commit -s
+  cm = commit -s -m
+  cma = commit -s -a -m
+  cmA = "!git add -A; git commit -s -m"
   cmam = commit --amend -m
   cg = "!gen_commit_msg \"$@\""
   d = diff
