feat: Add markdown preview using bat
Adds a new preview command to ctpv to render markdown
files using `bat`. Both glow and mdcat were giving me
problems.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/ctpv/config
+++ b/dot_config/ctpv/config
@@ -1,2 +1,7 @@
 # set forcechafa
 # set autochafa
+
+# Add a new preview
+preview bat_md .md {{
+    bat -pp --color=always --wrap character --terminal-width "$w" "$f"
+}}
