--- a/dot_config/yay/config.json
+++ b/dot_config/yay/config.json
@@ -1,40 +1,50 @@
 {
-	"aururl": "https://aur.archlinux.org",
-	"buildDir": "$HOME/.cache/yay",
-	"editor": "",
-	"editorflags": "",
-	"makepkgbin": "makepkg",
-	"makepkgconf": "",
-	"pacmanbin": "pacman",
-	"pacmanconf": "/etc/pacman.conf",
-	"tarbin": "bsdtar",
-	"redownload": "no",
-	"rebuild": "no",
-	"answerclean": "",
-	"answerdiff": "",
-	"answeredit": "",
-	"answerupgrade": "",
-	"gitbin": "git",
-	"gpgbin": "gpg",
-	"gpgflags": "",
-	"mflags": "",
-	"sortby": "votes",
-	"gitflags": "",
-	"removemake": "ask",
-	"requestsplitn": 150,
-	"sortmode": 0,
-	"completionrefreshtime": 7,
-	"sudoloop": false,
-	"timeupdate": false,
-	"devel": false,
-	"cleanAfter": false,
-	"gitclone": true,
-	"provides": true,
-	"pgpfetch": true,
-	"upgrademenu": true,
-	"cleanmenu": true,
-	"diffmenu": false,
-	"editmenu": true,
-	"combinedupgrade": false,
-	"useask": false
+  "aururl": "https://aur.archlinux.org",
+  "aurrpcurl": "https://aur.archlinux.org/rpc?",
+  "buildDir": "/home/joao/.cache/yay",
+  "editor": "",
+  "editorflags": "",
+  "makepkgbin": "makepkg",
+  "makepkgconf": "",
+  "pacmanbin": "pacman",
+  "pacmanconf": "/etc/pacman.conf",
+  "redownload": "no",
+  "answerclean": "",
+  "answerdiff": "",
+  "answeredit": "",
+  "answerupgrade": "",
+  "gitbin": "git",
+  "gpgbin": "gpg",
+  "gpgflags": "",
+  "mflags": "",
+  "sortby": "votes",
+  "searchby": "name-desc",
+  "gitflags": "",
+  "removemake": "ask",
+  "sudobin": "sudo",
+  "sudoflags": "",
+  "version": "12.4.2",
+  "requestsplitn": 150,
+  "completionrefreshtime": 7,
+  "maxconcurrentdownloads": 1,
+  "bottomup": true,
+  "sudoloop": false,
+  "timeupdate": true,
+  "devel": false,
+  "cleanAfter": false,
+  "keepSrc": false,
+  "provides": true,
+  "pgpfetch": true,
+  "cleanmenu": true,
+  "diffmenu": false,
+  "editmenu": true,
+  "combinedupgrade": false,
+  "useask": false,
+  "batchinstall": false,
+  "singlelineresults": false,
+  "separatesources": true,
+  "debug": false,
+  "rpc": true,
+  "doubleconfirm": true,
+  "rebuild": "no"
 }
