refactor: Change ghostty tab keybindings and hypridle gamma control
This commit simplifies the ghostty tab keybindings by removing the
shift modifier for switching and creating tabs. It also updates the
hypridle configuration to use `hyprctl hyprsunset gamma` for gamma
control, ensuring correct functionality and cleaner syntax.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -8,9 +8,9 @@ general {
 listener {
     timeout = 150   # 2.5min.
     # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-timeout = hyprsunset -g 30
+    on-timeout = hyprctl hyprsunset gamma 30
     # monitor backlight restore.
-    on-resume = hyprsunset -i
+    on-resume = hyprctl hyprsunset gamma 100
 }
 
 # turn off keyboard backlight
