--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -88,7 +88,7 @@ keybind = alt+shift+o=new_split:down
 keybind = alt+enter=toggle_split_zoom
 
 # tabs
-keybind = alt+shift+left=previous_tab
-keybind = alt+shift+right=next_tab
-keybind = alt+shift+t=new_tab
+keybind = alt+left=previous_tab
+keybind = alt+right=next_tab
+keybind = alt+n=new_tab
 
