--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -227,7 +227,7 @@ bind = $mod+CONTROL, T, exec, $uwsm_app foot
 bind = $mod, P, exec, $menu
 bind = $mod, RETURN, exec, $menu
 # other
-bind = $mod+CONTROL, A, exec, $term_exec calcurse
+bind = $mod+CONTROL, A, exec, $term_exec ikhal
 bind = $mod+CONTROL, C, exec, $term_exec numbat
 bind = $mod++SHIFT,  C, exec, $term_exec codi
 bind = $mod+CONTROL+SHIFT, C, exec, $term_exec mmaxima
