feat: Remove newsboat and replace dtodo with joplin
This commit removes newsboat and replaces dtodo with joplin-desktop.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -232,12 +232,10 @@ bind = $mod+CONTROL, C, exec, $term_exec numbat
 bind = $mod++SHIFT,  C, exec, $term_exec codi
 bind = $mod+CONTROL+SHIFT, C, exec, $term_exec mmaxima
 bind = $mod, V, exec, $term --class=com.joaocostaifg.clipse -e clipse
-#bind = $mod+CONTROL, E, exec, XDG_SESSION_TYPE=x11 GDK_BACKEND=x11 MOZ_ENABLE_WAYLAND=0 QT_QPA_PLATFORM="xcb" birdtray -t
 bind = $mod+CONTROL, E, exec, $uwsm_app thunderbird && hyprctl dispatch togglespecialworkspace thunderbird
 bind = $mod+CONTROL, F, exec, $file_manager
-bind = $mod+CONTROL, I, exec, $term_exec newsboat
 bind = $mod+CONTROL, M, exec, $uwsm_app dmount
-bind = $mod+CONTROL, N, exec, $uwsm_app dtodo
+bind = $mod+CONTROL, N, exec, $uwsm_app joplin-desktop
 # bind = $mod, M, exec, screen_measure
 bind = $mod+CONTROL, P, exec, $uwsm_app gimp
 bind = $mod+CONTROL, R, exec, $uwsm_app $BROWSER
