feat: use fenv to manage environment variables
This commit introduces `fenv` to manage environment
variables within the Fish shell, replacing the previous
`babelfish` approach. It also configures the `starship`
prompt to only load in interactive sessions and uses
`uwsm` to only start the desktop in login sessions.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
+[submodule "modules/fenv"]
+	path = modules/fenv
+	url = https://github.com/oh-my-fish/plugin-foreign-env
