kitty: found out there's dim, so colors are good enough now.
Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1318,7 +1318,7 @@ background_blur 8
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-# dim_opacity 0.4
+dim_opacity 0.75
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
