feat: Disable default kitty shortcut kitty_mod+s
Disables the default kitty_mod+s shortcuts, because alt+s is used by
fish to preprend sudo to the command.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1960,6 +1960,7 @@ kitty_mod alt
 
 # clear_all_shortcuts no
 map kitty_mod+f no_op
+map kitty_mod+s no_op
 
 #: Remove all shortcut definitions up to this point. Useful, for
 #: instance, to remove the default shortcuts.
