refactor: Remap and improve keybindings in hyprland.conf
Remaps conflicting keybindings for lock screen and suspend.
Adjusts media keybindings for better accessibility.
Changes notification toggle keybinding.
Corrects and improves screenshot keybindings.

Fixes conflicts and improves usability.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -210,9 +210,9 @@ bind = $mod+SHIFT+CONTROL, R, exec, $uwsm_app hyprctl reload
 bind = ALT, F4, killactive,
 bind = $mod, Q, killactive,
 # lock screen
-bind = $mod, F12, exec, $uwsm_app loginctl lock-session
+bind = $mod, F11, exec, $uwsm_app loginctl lock-session
 # suspend
-bind = $mod+SHIFT, F12, exec, $uwsm_app systemctl suspend
+bind = $mod, F12, exec, $uwsm_app systemctl suspend
 # toggle bar
 bind = $mod, B, exec, $uwsm_app killall -SIGUSR1 waybar
 
@@ -258,19 +258,17 @@ bind = SHIFT, XF86AudioMute,     exec, $uwsm_app pactl set-source-mute @DEFAULT_
 # display
 bind = $mod, F4, exec, $uwsm_app brightnessctl -c backlight set 5%-
 bind = $mod, F5, exec, $uwsm_app brightnessctl -c backlight set 5%+
-bind = $mod, F6, exec, $uwsm_app brightnessctl -c backlight -r
 #
 bind = , XF86MonBrightnessDown, exec, $uwsm_app brightnessctl -c backlight set 5%-
 bind = , XF86MonBrightnessUp, exec, $uwsm_app brightnessctl -c backlight set 5%+
-bind = , XF86Display, exec, $uwsm_app brightnessctl -c backlight -r
 # media
-bind = $mod, F7, exec, $uwsm_app playerctl play-pause
-bind = $mod+SHIFT, F7, exec, $uwsm_app playerctl position 0
-bind = $mod+CONTROL, F7, exec, $uwsm_app notify-send -u low 'Current song' "$(mpc current)"
-bind = $mod, F8, exec, $uwsm_app playerctl previous
-bind = $mod+SHIFT, F8, exec, $uwsm_app playerctl volume 0.05-
-bind = $mod, F9, exec, $uwsm_app playerctl next
-bind = $mod+SHIFT, F9, exec, $uwsm_app playerctl volume 0.05+
+bind = $mod, F6, exec, $uwsm_app playerctl play-pause
+bind = $mod+SHIFT, F6, exec, $uwsm_app playerctl position 0
+bind = $mod+CONTROL, F6, exec, $uwsm_app notify-send -u low 'Current song' "$(mpc current)"
+bind = $mod, F7, exec, $uwsm_app playerctl previous
+bind = $mod+SHIFT, F7, exec, $uwsm_app playerctl volume 0.05-
+bind = $mod, F8, exec, $uwsm_app playerctl next
+bind = $mod+SHIFT, F8, exec, $uwsm_app playerctl volume 0.05+
 #
 bind = , XF86AudioPlay, exec, $uwsm_app playerctl play-pause
 bind = SHIFT, XF86AudioPlay, exec, $uwsm_app playerctl position 0
@@ -285,7 +283,7 @@ bind = , XF86Search, exec, $menu
 #
 # Notifications:
 #
-bind = $mod,          F11, exec, $uwsm_app swaync-client -d -sw # toggle dnd
+bind = $mod,          F10, exec, $uwsm_app swaync-client -d -sw # toggle dnd
 bind = $mod,          backspace, exec, $uwsm_app swaync-client --close-latest -sw # dismiss last
 bind = $mod+SHIFT,    backspace, exec, $uwsm_app swaync-client --close-all -sw # dismiss all
 bind = $mod+CONTROL,  backspace, exec, $uwsm_app swaync-client -t -sw # show notifications
@@ -293,10 +291,10 @@ bind = $mod+CONTROL,  backspace, exec, $uwsm_app swaync-client -t -sw # show not
 #
 # Screenshots:
 #
-bind = $mod+SHIFT,    S, exec, $uwsm_app killall slurp; screenshots "snip"
-bind = $mod,          Print, exec, $uwsm_app killall slurp; screenshots "snip-edit"
-bind = $mod+SHIFT,    Print, exec, $uwsm_app screenshots "current-save"
-bind = $mod+CONTROL,  Print, exec, $uwsm_app screenshots
+bind = $mod+SHIFT,  S, exec, $uwsm_app killall slurp; screenshots "snip"
+bind = ,            Print, exec, $uwsm_app killall slurp; screenshots "snip-edit"
+bind = $mod,        Print, exec, $uwsm_app screenshots
+bind = $mod+SHIFT,  Print, exec, $uwsm_app screenshots "current-save"
 
 #
 # Movement:
