refactor: Migrate autostart apps from systemd to Hyprland
Migrates autostart configuration for udiskie, playerctld,
hyprpolkitagent, openrgb, and the XPPen tablet from systemd
services to Hyprland's autostart.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -390,6 +390,12 @@ exec-once = $uwsm_app hypridle
 exec-once = $uwsm_app swaync
 # menu
 exec-once = $uwsm_app walker --gapplication-service
+# udiskie for automount
+exec-once = $uwsm_app udiskie
+# playerctl daemon
+exec-once = $uwsm_app playerctld
+# polkit agent
+exec-once = $uwsm_app /usr/lib/hyprpolkitagent
 
 # lf file handling from GUI
 exec-once = $uwsm_app lf-file-handler
@@ -406,5 +412,9 @@ exec-once = $uwsm_app thunderbird
 exec-once = $uwsm_app clipse -listen
 # easy effects
 # exec-once = $uwsm_app easyeffects --gapplication-service
-# drawing table
+
+# ifgdt apps
+# open rgb sakura theme
+exec-once = $uwsm_app openrgb --gapplication-service -p Sakura
+# XPPen drawing table
 exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
