chore: update config files and nvim plugins
Updates fish shell configuration to use alias instead of abbr
for 'decompress' command.

Updates Hyprland configuration to include hyprtags settings
and fix OpenRGB execution command.

Updates nvim plugins to their latest versions.

Signed-off-by: JoaoCostaIFG <joaocosta.work@posteo.net>

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,6 +9,10 @@ plugin {
     xwaylandprimary {
         display = DP-1
     }
+
+    hyprtags {
+        main_display = DP-1
+    }
 }
 
 # Set programs that you use
@@ -415,6 +419,6 @@ exec-once = $uwsm_app clipse -listen
 
 # ifgdt apps
 # open rgb sakura theme
-exec-once = $uwsm_app openrgb --gapplication-service -p Sakura
+exec-once = $uwsm_app openrgb -p Sakura
 # XPPen drawing table
 exec-once = $uwsm_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
